--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/css/font.css" />
   <link rel="stylesheet" href="assets/css/report.css" />
-  <script src="assets/js/html2pdf.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet">
   <!-- <link rel="stylesheet" href="assets/css/report-dark.css" /> -->
 <link rel="stylesheet" href="styles.336630dfa279143a6575.css"></head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.06daa30a2963fa413676.js"></script><script type="text/javascript" src="polyfills.d64817aaf614d4221ef9.js"></script><script type="text/javascript" src="main.0d0cb5dc407f0d466a02.js"></script></body>
+<script type="text/javascript" src="runtime.06daa30a2963fa413676.js"></script><script type="text/javascript" src="polyfills.d64817aaf614d4221ef9.js"></script><script type="text/javascript" src="main.b96c22bea77c114e7641.js"></script></body>
 
 </html>
