--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <link rel="stylesheet" href="assets/css/report.css" />
   <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet">
   <!-- <link rel="stylesheet" href="assets/css/report-dark.css" /> -->
-<link rel="stylesheet" href="styles.336630dfa279143a6575.css"></head>
+<link rel="stylesheet" href="styles.964404b4a8179776649f.css"></head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.06daa30a2963fa413676.js"></script><script type="text/javascript" src="polyfills.d64817aaf614d4221ef9.js"></script><script type="text/javascript" src="main.95d53f2d79ebd4cdb273.js"></script></body>
-
+<script type="text/javascript" src="runtime.06daa30a2963fa413676.js"></script><script type="text/javascript" src="polyfills.d64817aaf614d4221ef9.js"></script><script type="text/javascript" src="main.29fc02da3907317d99bb.js"></script></body>
+<script src='assets/js/jspdf.min.js'></script>
+<script src='assets/js/generate.js'></script>
 </html>
